--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "goodreads-reactjs",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://SaraWent.github.io/goodreads-test/",
   "dependencies": {
     "axios": "^0.18.1",
     "react": "^16.5.2",
@@ -12,10 +13,15 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "description": "This application uses goodreads api to look for books by title, author or isbn code.",
   "main": "index.js",
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
+  }
 }
